supervisor-macros/tests/ui/compile_fail/pool_max_gt_members.stderr
error: pool `max:` (3) exceeds the declared member count (2)
  --> tests/ui/compile_fail/pool_max_gt_members.rs:10:22
   |
10 |         min: 1, max: 3;
   |                      ^
